--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9.31.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-vue": "^10.3.0",
-    "vue-eslint-parser": "^10.2.0"
+    "vue-eslint-parser": "^10.2.0",
+    "wait-on": "^8.0.3"
   }
 }
